Added .gitignore, deleted tutorial files

--- a/main.tex
+++ b/main.tex
@@ -50,12 +50,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%% Туториал %%%%%%%%%%%%%%
-\include{tutorial}
+%\include{tutorial}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 %%%%%%%%%%%% Источники %%%%%%%%%%%%%%%%%%
-\include{bibpage}
+%\include{bibpage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
