Added normal list

--- a/Settings/packages.tex
+++ b/Settings/packages.tex
@@ -45,6 +45,6 @@
 
 \usepackage{chngcntr} % пакет подписей и нумерации рисунков
 
-
+\usepackage{enumitem} % пакет с нормальным списком
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
