--- a/Settings/format.tex
+++ b/Settings/format.tex
@@ -73,5 +73,7 @@
 %\usemintedstyle{colorful} % делает подсветку для кода
 \newenvironment{code}{\captionsetup{type=listing}}{}
 
+\newlist{enumlist}{enumerate}{10}
+\setlist[enumlist]{label*=\arabic*.}
 
 % Посмотреть ещё стили можно тут https://www.overleaf.com/learn/latex/Code_Highlighting_with_minted
