--- a/macros.tex
+++ b/macros.tex
@@ -29,3 +29,10 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%% \anonsection  %%%%%%%%%%%%%%%%%%
+%Секция, присутсвующая в оглавлении, но без номера
+
+
+\newcommand{\anonsection}[1]{\section*{#1}\addcontentsline{toc}{section}{#1}}
