--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%% Титульный лист %%%%%%%%%%%%%%
+\includepdf[pages=-]{task.pdf}
 
 % Если нужно вставить свой титульный лист, то загрузите его в формате .pdf и переименуйте на titlepage, он вставится в начало документа
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -54,7 +55,7 @@
 
 
 %%%%%%%%%%%% Источники %%%%%%%%%%%%%%%%%%
-%\include{bibpage}
+\include{bibpage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
