--- a/Settings/format.tex
+++ b/Settings/format.tex
@@ -76,4 +76,7 @@
 \newlist{enumlist}{enumerate}{10}
 \setlist[enumlist]{label*=\arabic*.}
 
+\usepackage{titlesec}
+\titleformat{\section}{\normalfont\Large\bfseries}{}{0pt}{}
+
 % Посмотреть ещё стили можно тут https://www.overleaf.com/learn/latex/Code_Highlighting_with_minted
