--- a/content.tex
+++ b/content.tex
@@ -1,11 +1,36 @@
 \newpage
 \anonsection{ВВЕДЕНИЕ}
-\newpage
-\section{Глава 1}
-\newpage
+В процессе эксплуатации зданий и сооружений существует потребность в мониторинге и управлении состоянием различныхи инженерных систем здания, таких как:
 
-\section{Глава 2}
-\newpage
-\section{Глава 3}
-\newpage
-\anonsection{ЗАКЛЮЧЕНИЕ}
+\begin{itemize}
+	\itemsep0em 
+	\item Водоснабжение и водоотведениe
+	\item Электроснабжениe
+	\item Газоснабжениe
+	\item Отоплениe
+	\item Вентиляция
+	\item Пожаротушение
+	\item Кондиционированиe
+	\item Контроль и управления доступом и др.
+\end{itemize}
+
+Для гарантии качественного обслуживания данных систем используются системы автоматизированного мониторинга. Данные комплексы позволяют в кратчайшие сроки обнаружить и устранить неполадки в вышеуказанных системах, а также модифицировать их таким образом, чтобы они были способны автоматически реагировать на определенные внештатные ситуации, уведомлять об этом оператора и предпринимать действия по их ликвидации.
+
+Основные задачи:
+\begin{itemize}
+	\itemsep0em 
+	\item Произвести анализ возможных внештатных ситуаций, требующих немедленного реагирования
+	\item Разработать макет технического и програмного решения с использованием доступных компонентов
+	\item Привести варианты практического прмиенения 
+\end{itemize} 
+
+
+
+\newpage\section{Глава 1}
+\subsection{подзаголовок1}
+
+\newpage\section{Глава 2}
+
+\newpage\section{Глава 3}
+
+\newpage\anonsection{ЗАКЛЮЧЕНИЕ}
