--- a/bibpage.tex
+++ b/bibpage.tex
@@ -1,5 +1,5 @@
 \newpage
-\renewcommand*\refname{БИБЛИОГРАФИЧЕСКИЙ СПИСОК} % Эта строка заменяет название References на Источники
+\renewcommand*\refname{Источники} % Эта строка заменяет название References на Источники
 \nocite{*}
 \bibliography{refs}
-\addcontentsline{toc}{section}{БИБЛИОГРАФИЧЕСКИЙ СПИСОК}
+\addcontentsline{toc}{section}{Источники}
