--- a/content.tex
+++ b/content.tex
@@ -19,15 +19,20 @@
 Основные задачи:
 \begin{itemize}
 	\itemsep0em 
+	\item Произвести анализ текущей ситуации и решений, представленных на рынке
 	\item Произвести анализ возможных внештатных ситуаций, требующих немедленного реагирования
-	\item Разработать макет технического и програмного решения с использованием доступных компонентов
+	\item Разработать макет технического и програмного решения
 	\item Привести варианты практического прмиенения 
-\end{itemize} 
+\end{itemize}
 
 
+\newpage\section{Анализ текущей ситуации}
 
-\newpage\section{Глава 1}
-\subsection{подзаголовок1}
+На данный момент наибольшей проблемой является отстутствие иностранного оборудования и программного обеспечения. Большинство решений, представленных на рынке используют технологии Intel/Amd, а также ПО, предоставляющееся исключительно на коммерческой основе.
+
+По этой причине следует максимально ограничить использование оборудования и ПО стран, остановивших поставки и использовать имеющиеся альтернативы.
+
+Такими альтернативами могут стать Open Source програмное обеспечение и аппаратная платформа Arduino.
 
 \newpage\section{Глава 2}
 
