--- a/content.tex
+++ b/content.tex
@@ -1,41 +1,76 @@
 \newpage
 \anonsection{ВВЕДЕНИЕ}
-В процессе эксплуатации зданий и сооружений существует потребность в мониторинге и управлении состоянием различныхи инженерных систем здания, таких как:
+В процессе эксплуатации зданий и сооружений существует потребность в мониторинге и управлении состоянием различными инженерных систем здания, таких как:
 
 \begin{itemize}
 	\itemsep0em 
-	\item Водоснабжение и водоотведениe
-	\item Электроснабжениe
-	\item Газоснабжениe
-	\item Отоплениe
+	\item Водоснабжение и водоотведение
+	\item Электроснабжение
+	\item Газоснабжение
+	\item Отопление
 	\item Вентиляция
 	\item Пожаротушение
-	\item Кондиционированиe
+	\item Кондиционирование
 	\item Контроль и управления доступом и др.
 \end{itemize}
 
 Для гарантии качественного обслуживания данных систем используются системы автоматизированного мониторинга. Данные комплексы позволяют в кратчайшие сроки обнаружить и устранить неполадки в вышеуказанных системах, а также модифицировать их таким образом, чтобы они были способны автоматически реагировать на определенные внештатные ситуации, уведомлять об этом оператора и предпринимать действия по их ликвидации.
 
-Основные задачи:
+В текущей ситуации разработка подобных систем осложнена в связи с прекращением поставок оборудования и лицензий на программное обеспечение из большинства стран.
+
+Альтернативой коммерческому ПО является Open Source программное обеспечение, распространяющееся на бесплатной основе, и открытое для модификации.
+В качестве альтернативного оборудования может быть использована платформа Arduino.
+Arduino - программно-аппаратная платформа для построения электронных схем, создания моделей, а также автоматизации процессов и робототехники.
+
+Основное преимущество использования данной платформы - широкие возможности для расширения с помощью готовых модулей, либо компонентов, требующих самостоятельной сборки.
+
+Главный недостаток - отсутствие готовых решений, из чего следует необходимость самостоятельной разработки ПО и сборки модулей, готовых для развертывания на площадке клиента.
+
+В связи с этим требуется разработка решения, которое позволит комбинировать различные доступные модули с целью создания систем управления различной сложности.
+
+Основные задачи курсовой работы:
 \begin{itemize}
 	\itemsep0em 
 	\item Произвести анализ текущей ситуации и решений, представленных на рынке
 	\item Произвести анализ возможных внештатных ситуаций, требующих немедленного реагирования
-	\item Разработать макет технического и програмного решения
-	\item Привести варианты практического прмиенения 
+	\item Разработать макет технического и программного решения
+	\item Привести варианты практического применения разработанных решений 
 \end{itemize}
 
 
-\newpage\section{Анализ текущей ситуации}
+\newpage\section{Общие сведения о разрабатываемой системе}
+\subsection{Назначение и цели создания системы}
+Основным назначением системы является модификация существующих системы с целью осуществления автоматизированного мониторинга и управления.
 
-На данный момент наибольшей проблемой является отстутствие иностранного оборудования и программного обеспечения. Большинство решений, представленных на рынке используют технологии Intel/Amd, а также ПО, предоставляющееся исключительно на коммерческой основе.
+Цели создания системы:
+\begin{enumerate}
+	\itemsep0em 
+	\item Повышение надежности и отказоустойчивости существующих систем зданий и сооружений
+	\item Снижение ущерба от возможных аварий
+	\item Повышение скорости реагирования на внештатные ситуации
+	\item Осуществление постоянного мониторинга состояния основных систем ЗиС
+	\item Замена существующих импортных систем, требующих поддержки и сопровождения на собственную разработку
+\end{enumerate}
 
-По этой причине следует максимально ограничить использование оборудования и ПО стран, остановивших поставки и использовать имеющиеся альтернативы.
+\section{Требования к системе}
+\subsection{Требования к системе в целом}
+\begin{enumerate}
+	\itemsep0em 
+	\item Постоянная работа 
+	\item 
+	\item 
+	\item 
+\end{enumerate}
+\subsection{Требования к численности и квалификации персонала системы}
+\subsection{Требования к надежности}
+\subsection{Требования к безопасности}
 
-Такими альтернативами могут стать Open Source програмное обеспечение и аппаратная платформа Arduino.
-
-\newpage\section{Глава 2}
 
 \newpage\section{Глава 3}
+
+
+
+
+
 
 \newpage\anonsection{ЗАКЛЮЧЕНИЕ}
