--- a/Settings/format.tex
+++ b/Settings/format.tex
@@ -77,6 +77,6 @@
 \setlist[enumlist]{label*=\arabic*.}
 
 \usepackage{titlesec}
-\titleformat{\section}{\normalfont\Large\bfseries}{}{0pt}{}
+% \titleformat{\section}{\normalfont\Large\bfseries}{}{0pt}{}
 
 % Посмотреть ещё стили можно тут https://www.overleaf.com/learn/latex/Code_Highlighting_with_minted
