Добавлены описания нескольких датчиков, глава вынесена в отдельный файл

--- a/content.tex
+++ b/content.tex
@@ -60,7 +60,7 @@ Arduino - программно-аппаратная платформа для п
 	\itemsep0em 
 	\item Осуществлять постоянный мониторинг всех требуемых параметров
 	\item Производить оповещение персонала в случае внештатных ситуаций
-	\item Осуществлять самодиагностику с целью раннего выявления неисправностей компонентов и сигнализировать об этом
+	\item Осуществлять само диагностику с целью раннего выявления неисправностей компонентов и сигнализировать об этом
 	\item Осуществлять вышеуказанные действия в аварийных ситуациях, связанных с отключением питания, повреждением отдельных компонентов и т.д.
 \end{enumerate}
 
@@ -77,57 +77,7 @@ Arduino - программно-аппаратная платформа для п
 	\item Доступ к терминалам имеют лица, непосредственно работающие с системой, присутствие посторонних исключено
 \end{enumerate}
 \newpage\section{Общая концепция работы системы}
-\subsection{Базовый модуль}
-Для мониторинга состояний систем зданий и сооружений предполагается использование различных датчиков, присоединенных к стандартному модулю связи и управления.
-Модуль имеет широкие возможности гибкой конфигурации для различных сценариев использования.
-
-В основе модуля лежит плата Wemos D1 Mini, имеющая следующие характеристики:
-\begin{itemize}
-	\item Микроконтроллер: ESP8266.
-	\item Разрядность: 32 бит.
-	\item Напряжение питания платы: 3,3 / 5,0 В.
-	\item Беспроводной интерфейс: Wi-Fi 802.11 b/g/n 2,4 ГГц (STA/AP/STA+AP, WEP/TKIP/AES, WPA/WPA2).
-	\item Поддерживаемые шины: SPI, I2C, I2S, 1-wire, UART, UART1, IR Remote Control.
-	\item Цифровые выводы I/O: 11 (RX, TX, D0...D8) все выводы кроме D0 поддерживают INT (внешнее прерывание), ШИМ, I2C, 1-wire.
-	\item Аналоговые входы: 1 (A0) 10-битный АЦП.
-	\item Логические уровни выводов I/O: 3,3 В
-	\item Максимальный ток на выводе I/O: 12 мА (для каждого вывода).
-	\item Максимальное напряжение на входе A0: 3,2 В (между выводом A0 и GND)
-	\item Flash-память: 4 МБ.
-	\item RAM-память данных: 80 КБ.
-	\item RAM-память инструкций: 32 КБ.
-	\item Тактовая частота микроконтроллера: 80 МГц.
-	\item Чип USB-UART преобразователя: CH340G .
-	\item Рабочая температура: -40 +85 °C .
-	\item Габариты: 34,2x25,6 мм.
-	\item Вес: 10 г.
-\end{itemize}
-Главное преимущество данной платы - наличие wi-fi модуля, способного работать на частоте 2.4 Ггц непосредственно на плате, что позволяет уменьшить размеры модуля, так как дополнительный модуль связи не требуется.
-Плата имеет 11 цифровых и 1 аналоговый вход, также способна работать с датчиками/модулями, поддерживающими протокол I2C .
-\image{wemos_pinout.jpg}{Распиновка платы Wemos D1 Mini}{0.7}
-Модуль для функционирования требует постоянное напряжение 5V, которое может быть обеспечено встроенным в плату блоком питания, преобразующим 220V AC в 5V DC
-
-В качестве стандартного блока питания базового модуля используется HLK-PM01 - миниатюрный блок питания, обеспечивающий преобразование 220V AC в 5V DC, и обеспечивающий питание Wemos, а также подключенных модулей.
-Максимальная нагрузка на данный блок питания составляет 0.6 A. Данной мощности достаточно для подключения большого количества датчиков, так как зачастую они потребляют не больше 1 мА.
-\image{power_supply.png}{Блок питания HLK-PM01}{0.7}
-
-Для удобства сборки и дальнейшего использования проектируется печатная плата.
-На ней расположены модули контроллера и блока питания, а также имеются троки входов Vcc Gnd и Logic для подключения датчиков.
-К базовой версии платы возможно подключить 6 цифровых/аналоговых датчиков.
-При необходимости конфигурация платы может изменяться для обеспечения возможности подключения бОльшего числа датчиков, либо датчиков/модулей с более сложными интерфейсами, например I2C .
-
-Печатная плата спроектирована и разведена в редакторе EasyEDA .
-\image{main_pcb_scheme.png}{Схема разводки печатной платы базового модуля}{0.7}
-\image{main_pcb_image.png}{Изображение печатной платы базового модуля}{0.7}
-
-
-\subsection{Подключаемые датчики}
-
-
-\subsection{Терминалы доступа}
-\subsection{Сервер}
-\subsection{Методы передачи данных}
-
+\input{first_section}
 
 
 \newpage\anonsection{ЗАКЛЮЧЕНИЕ}
