Проект полностью разделен на файлы

--- a/content.tex
+++ b/content.tex
@@ -1,83 +1,18 @@
 \newpage
 \anonsection{ВВЕДЕНИЕ}
-В процессе эксплуатации зданий и сооружений существует потребность в мониторинге и управлении состоянием различными инженерных систем здания, таких как:
-
-\begin{itemize}
-	\itemsep0em 
-	\item Водоснабжение и водоотведение
-	\item Электроснабжение
-	\item Газоснабжение
-	\item Отопление
-	\item Вентиляция
-	\item Пожаротушение
-	\item Кондиционирование
-	\item Контроль и управления доступом и др.
-\end{itemize}
-
-Для гарантии качественного обслуживания данных систем используются системы автоматизированного мониторинга.
-Данные комплексы позволяют в кратчайшие сроки обнаружить и устранить неполадки в вышеуказанных системах, а также модифицировать их таким образом, чтобы они были способны автоматически реагировать на определенные внештатные ситуации, уведомлять об этом оператора и предпринимать действия по их ликвидации.
-
-В текущей ситуации разработка подобных систем осложнена в связи с прекращением поставок оборудования и лицензий на программное обеспечение из большинства стран.
-
-Альтернативой коммерческому ПО является Open Source программное обеспечение, распространяющееся на бесплатной основе, и открытое для модификации.
-В качестве альтернативного оборудования может быть использована платформа Arduino.
-Arduino - программно-аппаратная платформа для построения электронных схем, создания моделей, а также автоматизации процессов и робототехники.
-
-Основное преимущество использования данной платформы - широкие возможности для расширения с помощью готовых модулей, либо компонентов, требующих самостоятельной сборки.
-
-Главный недостаток - отсутствие готовых решений, из чего следует необходимость самостоятельной разработки ПО и сборки модулей, готовых для развертывания на площадке клиента.
-
-В связи с этим требуется разработка решения, которое позволит комбинировать различные доступные модули с целью создания систем управления различной сложности.
-
-Основные задачи курсовой работы:
-\begin{itemize}
-	\itemsep0em 
-	\item Произвести анализ текущей ситуации и решений, представленных на рынке
-	\item Произвести анализ возможных внештатных ситуаций, требующих немедленного реагирования
-	\item Разработать макет технического и программного решения
-	\item Привести варианты практического применения разработанных решений 
-\end{itemize}
+\input{introduction.tex}
 
 
 \newpage\section{Общие сведения о разрабатываемой системе}
-\subsection{Назначение и цели создания системы}
-Основным назначением системы является модификация существующих системы с целью осуществления автоматизированного мониторинга и управления.
+\input{section1.tex}
 
-Цели создания системы:
-\begin{enumerate}
-	\itemsep0em 
-	\item Повышение надежности и отказоустойчивости существующих систем зданий и сооружений
-	\item Снижение ущерба от возможных аварий
-	\item Повышение скорости реагирования на внештатные ситуации
-	\item Осуществление постоянного мониторинга состояния основных систем ЗиС
-	\item Замена существующих импортных систем, требующих поддержки и сопровождения на собственную разработку
-\end{enumerate}
 
-\section{Требования к системе}
-\subsection{Требования к системе в целом}
-Система должна быть способна:
-\begin{enumerate}
-	\itemsep0em 
-	\item Осуществлять постоянный мониторинг всех требуемых параметров
-	\item Производить оповещение персонала в случае внештатных ситуаций
-	\item Осуществлять само диагностику с целью раннего выявления неисправностей компонентов и сигнализировать об этом
-	\item Осуществлять вышеуказанные действия в аварийных ситуациях, связанных с отключением питания, повреждением отдельных компонентов и т.д.
-\end{enumerate}
+\newpage\section{Требования к системе}
+\input{section2.tex}
 
-\subsection{Требования к численности и квалификации персонала системы}
-\begin{enumerate}
-	\itemsep0em 
-	\item Один дежурный администратор, контролирующий состояние системы (нескольких систем)
-	\item Бригада специалистов, способная диагностировать и устранять неполадки (Также может обслуживать сразу несколько объектов, находящихся в определенном удалении от пункта базирования бригады, точное расстояние определяется требуемым временем реагирования)
-	\end{enumerate}
-\subsection{Требования к безопасности}
-\begin{enumerate}
-	\itemsep0em 
-	\item Доступ к системе должны иметь только авторизованные пользователи
-	\item Доступ к терминалам имеют лица, непосредственно работающие с системой, присутствие посторонних исключено
-\end{enumerate}
+
 \newpage\section{Общая концепция работы системы}
-\input{first_section}
+\input{section3.tex}
 
 
 \newpage\anonsection{ЗАКЛЮЧЕНИЕ}
