--- a/section3.tex
+++ b/section3.tex
@@ -1,3 +1,5 @@
+\subsection{Архитектура системы}
+
 \subsection{Базовый модуль}
 Для мониторинга состояний систем зданий и сооружений предполагается использование различных датчиков, присоединенных к стандартному модулю связи и управления.
 Модуль имеет широкие возможности гибкой конфигурации для различных сценариев использования.
@@ -119,7 +121,7 @@ DS18B20 – цифровой термометр, способный измеря
 
 Описание:
 
-Цифровой инфракрасный датчик обхода препятствий YL-63 (или FC-51) (рис.1) применяется тогда, когда нужно определить наличие объекта, а точное расстояние до объекта знать необязательно.
+Цифровой инфракрасный датчик обхода препятствий YL-63 (или FC-51) применяется тогда, когда нужно определить наличие объекта, а точное расстояние до объекта знать необязательно.
 Датчик состоит из инфракрасного излучателя, и фотоприемника.
 ИК источник излучает инфракрасные волны, которые отражаются от препятствия и фиксируются фотоприемником.
 Датчик обнаруживает препятствия в диапазоне расстояний от нуля до установленной предельной границы.
@@ -127,6 +129,7 @@ DS18B20 – цифровой термометр, способный измеря
 Пороговое значение зависит от настройки датчика и регулируется с помощью установленного на модуле потенциометра.
 Для индикации питания на датчике установлен зеленый светодиод.
 
+Технические характеристики:
 \begin{itemize}
     \itemsep0em
     \item напряжение питания: 3.3–5 В
@@ -140,12 +143,36 @@ DS18B20 – цифровой термометр, способный измеря
     \item размеры: 43 х 16 х 7 мм
 \end{itemize}
 
+\newpage
+\textbf{Датчик уровня жидкости GSMIN HW-038}
+\image{water_sensor.png}{Датчик уровня жидкости}{0.7}
+
+Описание:
+
+Применяется в случаях, когда необходимо отслеживать наличие жидкости или конкретный её уровень, таких как затопление подвальных помещений, различные протечки и т.д.
+
+Технические характеристики:
+\begin{itemize}
+    \itemsep0
+    \item Рабочее напряжение: DC3-5V
+    \item Рабочий ток: менее чем 20 мА
+    \item Тип сенсора: аналоговый
+    \item Зона обнаружения: 40 мм x 16 мм
+    \item Рабочая температура: 10--30
+    \item Влажность: 10\%-90\% без конденсации
+    \item Размеры: 62 мм x 20 мм x 8 мм
+\end{itemize}
 
 
 
 
-\subsection{Терминалы доступа}
+%\codefromfile{wifi.c}{text}
 
-\subsection{Сервер}
 
-\subsection{Методы передачи данных}
+\subsection{Конфигурация сервера}
+
+%конфигурация сервера, принимающего/отправляющего информацию с датчиков/устройств, а также требуемое ПО
+
+\subsection{Протоколы передачи данных}
+
+%Описание http протокола, посредством которого осуществляется связь
