--- a/content.tex
+++ b/content.tex
@@ -3,15 +3,15 @@
 \input{introduction.tex}
 
 
-\newpage\section{Общие сведения о разрабатываемой системе}
+\newpage\section{Глава}
 \input{section1.tex}
 
 
-\newpage\section{Требования к системе}
+\newpage\section{Глава}
 \input{section2.tex}
 
 
-\newpage\section{Общая концепция работы системы}
+\newpage\section{Глава}
 \input{section3.tex}
 
 
