--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,3 @@
-% Шаблон для курсовой/диплома/отчета
-% Сделано Stulk3
-% Помогал ValeryVerkhoturov
-% https://github.com/Stulk3/Latex-Template-for-Report-Diploma-Thesis
-
-
-
-
 \documentclass[14pt, a4paper]{extarticle}
 
 
@@ -33,9 +25,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%% Титульный лист %%%%%%%%%%%%%%
-\includepdf[pages=-]{task.pdf}
+% Тут ссылка на титул
+%\includepdf[pages=-]{task.pdf}
 
-% Если нужно вставить свой титульный лист, то загрузите его в формате .pdf и переименуйте на titlepage, он вставится в начало документа
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%% Содержание %%%%%%%%%%%%%%%%%%
